# keywerty

./: Cargo.toml  Makefile  README.md  default.nix  vkwrty.nix
kb_core/: Cargo.toml  README.md
kb_core/src/: keys.rs  lib.rs  mapper.rs
kb_core/src/keyboard/: echoer.rs  impl.rs  mod.rs
kb_core/src/keyboard/state_machines/: dead_ksm.rs  double_tap_hold_ksm.rs  double_tap_ksm.rs  hold_ksm.rs  mod.rs  tap_ksm.rs
kb_core/src/keys/: mod.rs
kb_core/src/mapper/: mod.rs
keyboard_interface/: Cargo.toml
keyboard_interface/src/: lib.rs  map.rs
keywerty/: CHANGELOG.md  Cargo.toml  README.md
keywerty/examples/: keywerty.rs
keywerty/src/: keys.rs  lib.rs  mapper.rs
keywerty/src/keyboard/: mod.rs
keywerty/src/keyboard/smkb/: eager_hold_ksm.rs  helpers.rs  hold_ksm.rs  mod.rs  tap_ksm.rs
keywerty/src/keyboard/state_machines/: dead_ksm.rs  double_tap_hold_ksm.rs
src/: keyboard.rs  lib.rs  statem-keyboard.rs  statem_keyboard.rs
statem_kb/: Cargo.toml
statem_kb/src/: keyboard.rs  lib.rs
statem_kb/src/statem/: hold_ksm.rs
virtual-kb/: Cargo.toml  README.md
virtual-kb/src/: epoll.rs  evdev_kb.rs  lib.rs  main.rs  monitor.rs  util.rs  virtual_dev.rs
vkwrty/: Cargo.toml  Makefile  README.md
vkwrty/examples/: echoer.rs
vkwrty/package/: vkwrty.service
vkwrty/src/: epoll.rs  lib.rs  main.rs  monitor.rs  virtual_dev.rs
vkwrty_map/: Cargo.toml  README.md
vkwrty_map/src/: lib.rs
