[package]
name = "virtual-kb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.5.0"
num-traits = "0.2.4"
libc = "0.2.124"
kb_core = { path = "../kb_core", version = "0.1.0" }
clap = "2.33.0"
